<resources>
    <string name="app_name">Health Point Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="add_campaign">Add Campaign</string>

    <string name="saved_campaigns">tcg_health_point_tracker_campaigns</string>

    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>
    <string name="option_ok">OK</string>

    <string-array name="update_base_hp_conf_buttons">
        <item>Keep Difference</item>
        <item>Keep Current HP</item>
        <item>Set Current HP to Base HP</item>
        <item>Cancel</item>
    </string-array>

    <integer name="option_keep_diff">0</integer>
    <integer name="option_keep_current">1</integer>
    <integer name="option_restore_health">2</integer>
    <integer name="option_cancel">3</integer>

    <string name="campaign_fragment_base_hp">Base HP:</string>
    <string name="campaign_fragment_current_hp">Current HP:</string>
    <string name="campaign_fragment_full_heal_button_text">Heal All Health</string>
    <string name="campaign_fragment_die_button_text">Lose All Health</string>
    <string name="campaign_fragment_settings">Settings</string>
    <string name="campaign_fragment_nomod_title">Error</string>
    <string name="campaign_fragment_nomod_text">Please enter a value to add or subtract to current HP.</string>
    <string name="campaign_fragment_subconf_title">Subtract HP</string>
    <string name="campaign_fragment_subconf_text">It seems that subtracting that amount would result in a negative HP, clamp HP to 0?</string>
    <string name="campaign_fragment_addconf_title">Add HP</string>
    <string name="campaign_fragment_addconf_text">It seems that adding that amount would result in an HP higher than base HP, clamp HP to base HP?</string>
    <string name="campaign_fragment_full_heal_conf_title">Heal All Health</string>
    <string name="campaign_fragment_full_heal_conf_text">Set HP to base HP?</string>
    <string name="campaign_fragment_die_conf_title">Lose All Health</string>
    <string name="campaign_fragment_die_conf_text">Set HP to 0?</string>
    <string name="campaign_fragment_settings_update_title">Update Campaign Title</string>
    <string name="campaign_fragment_settings_update_base_hp">Update Base HP</string>
    <string name="campaign_fragment_settings_delete">Delete Campaign</string>
    <string name="campaign_fragment_update_title_conf_title">Change Title</string>
    <string name="campaign_fragment_update_title_conf_text" formatted="false">Change title from \"%s\" to \"%s\"?</string>
    <string name="campaign_fragment_update_title_err_title">Change Title</string>
    <string name="campaign_fragment_update_title_err_text">Please enter a new title.</string>
    <string name="campaign_fragment_update_base_hp_conf_title">Update Base HP</string>
    <string name="campaign_fragment_update_base_hp_conf_text">Which would you like to do?</string>
    <string name="campaign_fragment_update_base_hp_err_title">Update Base HP</string>
    <string name="campaign_fragment_update_base_hp_err_text">Which would you like to do?</string>
    <string name="campaign_fragment_delete_conf_title">Delete Campaign</string>
    <string name="campaign_fragment_delete_conf_text">Are you sure you want to delete this campaign?</string>

</resources>
